# grafify

./: .env.example  .gitignore  Pipfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  webpack.mix.js
.github/: FUNDING.yml
app/blueprints/: graph_selector.py  networkx_blueprint.py  nx_generators.py
app/utilities/: graph_selector.py
config/: app.py
resources/js/: app.js  graph.js
resources/js/force-directed-graph/: v6.js
resources/scss/: app.scss
static/: mix-manifest.json
static/css/: app.css
static/js/: app.js
templates/: base.html  form.html  graph.html  index.html  networkx-graph-json.html  networkx-graphs.html  result.html
templates/layout/: app-graph-view.html  app-main-center.html  app.html
templates/nx/: index.html
templates/partials/: footer.html  graph-container.html  graph-form.html  header.html  scripts.html
