[tool.poetry]
name = "grafify"
version = "0.1.0"
description = "A graph viewer app for JSON data based on D3.js and NetworkX format."
authors = ["Dendi Handian <contact.dendi@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
networkx = "^2.6.3"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
